Decompose persistent game state